# sync

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  vix.json
examples/: README.md  fake_http_transport.cpp  fake_transport.hpp  inflight_timeout.cpp  outbox_permanent_fail.cpp  outbox_smoke.cpp  vix_sync_showcase.cpp
include/vix/sync/: Operation.hpp  RetryPolicy.hpp
include/vix/sync/engine/: SyncEngine.hpp  SyncWorker.hpp
include/vix/sync/outbox/: FileOutboxStore.hpp  Outbox.hpp  OutboxStore.hpp
include/vix/sync/wal/: Wal.hpp  WalReader.hpp  WalRecord.hpp  WalWriter.hpp
src/engine/: SyncEngine.cpp  SyncWorker.cpp
src/outbox/: FileOutboxStore.cpp  Outbox.cpp
src/wal/: Wal.cpp  WalReader.cpp  WalWriter.cpp
tests/: CMakeLists.txt  fake_http_transport.hpp  sync_engine_inflight_timeout_test.cpp  sync_engine_outbox_permanent_fail_test.cpp  sync_engine_outbox_smoke_test.cpp
